[project]
name = "glowing-enigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.165.0",
    "google-auth>=2.38.0",
    "mattermostdriver>=7.3.2",
    "python-dotenv>=1.0.1",
    "tzdata>=2025.2",
]
